# FPL-Predictor

./: README.md  build_frontend.sh  combine_def_predictions.py  combine_fwd_predictions.py  combine_gk_predictions.py  combine_mid_predictions.py  combine_predictions.py  def_predictions.csv  def_predictions_combined.csv  def_predictions_lstm.csv  feature_importance_def.csv  feature_importance_fwd.csv  feature_importance_gk.csv  feature_importance_mid.csv  fwd_predictions.csv  fwd_predictions_combined.csv  fwd_predictions_gw23_filtered.csv  fwd_predictions_lstm.csv  gk_predictions.csv  gk_predictions_combined.csv  gk_predictions_lstm.csv  join_data.py  lstm_def_model.pt  lstm_def_scaler.pkl  lstm_def_training_report.csv  lstm_fwd_model.pt  lstm_fwd_scaler.pkl  lstm_fwd_training_report.csv  lstm_gk_model.pt  lstm_gk_scaler.pkl  lstm_gk_training_report.csv  lstm_mid_model.pt  lstm_mid_scaler.pkl  lstm_mid_training_report.csv  main.py  merged_fpl_understat_2022-23.csv  merged_fpl_understat_2025-26.csv  merged_fpl_understat_all_glossary.md  mid_predictions.csv  mid_predictions_combined.csv  (+29 more)
data/: merged_fpl_understat_2025-26.csv
frontend/: index.html  package-lock.json  package.json
models/: feature_importance_def.csv  feature_importance_fwd.csv  feature_importance_gk.csv  feature_importance_mid.csv  lstm_def_model.pt  lstm_def_scaler.pkl  lstm_def_training_report.csv  lstm_fwd_model.pt  lstm_fwd_scaler.pkl  lstm_fwd_training_report.csv  lstm_gk_model.pt  lstm_gk_scaler.pkl  lstm_gk_training_report.csv  lstm_mid_model.pt  lstm_mid_scaler.pkl  lstm_mid_training_report.csv  (+12 more)
(+69 files in other folders)
