[project]
name = "fpl-prediction"
version = "0.1.0"
description = "Fantasy Premier League points prediction using ML models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
]

[project.scripts]
fpl-train = "fpl_prediction.cli.train:main"
fpl-predict = "fpl_prediction.cli.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpl_prediction"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
